# DGIIM

./: .gitignore  .gitmodules
1/1_cuatrimestre/Cálculo I/Cuestiones teoricas/: Cuestiones teoricas.tex
1/1_cuatrimestre/Cálculo I/Evaluacion 3/: CI_Bolaños_Quesada_Ev3.tex
1/1_cuatrimestre/Cálculo I/Evaluacion 4/: CI_Bolanos_Quesada_Ev_4.tex
1/2_cuatrimestre/FS/: Ejemplos entornos Linux.odt  Trabajo_Tema3.odt
2/1_cuatrimestre/EC/: sum.c
2/1_cuatrimestre/SO/practicas/SO-P-Todos_MaterialModulo2/: CMakeLists.txt  recorrer  recorrer.c
2/1_cuatrimestre/SO/practicas/SO-P-Todos_MaterialModulo2/Sesion1/: archivo  ejercicio2  ejercicio2.c  ejercicio4  ejercicio4.c  prueba_ejer2.txt  salida.txt  tarea1  tarea1.c  tarea2
2/1_cuatrimestre/SO/practicas/SO-P-Todos_MaterialModulo2/Sesion2/: ejercicio2.c  ejercicio3  ejercicio3.c  ejercicio4  ejercicio4.c  tarea4  tarea4.c
2/1_cuatrimestre/SO/practicas/SO-P-Todos_MaterialModulo2/Sesion3/: consumidorFIFO.c  ejercicio1  ejercicio1.c  ejercicio4  ejercicio4.c  ejercicio5  ejercicio5.c  ejercicio7  ejercicio7.c  productorFIFO  productorFIFO.c  programa3  programa3.c  tarea4.c  tarea5  tarea5.c
2/1_cuatrimestre/SO/practicas/SO-P-Todos_MaterialModulo2/Sesion4/: esclavo  esclavo.c  maestro  maestro.c  tarea7  tarea7.c
2/1_cuatrimestre/SO/practicas/SO-P-Todos_MaterialModulo2/examen/: buscar  buscar.c  pares_impares  pares_impares.c
2/1_cuatrimestre/SO/practicas/SO-P-Todos_MaterialModulo2/examenes/: examen1  examen1.c
Algebra/Octave Scripts/Kx/: reduce.m
Algebra/Octave Scripts/Z/: AEE.m  bezout.m  cociente.m  potencias.m
(+522 files in other folders)
